# data-prep-lab

./: 404.html  README.md  index.html  run-transform.ipynb
transforms/: .make.cicd.targets  index.html  pyproject.toml  transforms-1.0-lang-Windows.ipynb
transforms/README-list/: index.html
transforms/add_new_kfp_workflow/: index.html
transforms/code/code2parquet/: index.html
transforms/code/code2parquet/kfp_ray/: code2parquet_wf.py  index.html
transforms/code/code2parquet/python/: index.html
transforms/code/code2parquet/ray/: index.html
transforms/code/code_profiler/: index.html
transforms/code/code_profiler/python/: requirements.txt
transforms/code/code_quality/: index.html
transforms/code/code_quality/kfp_ray/: code_quality_wf.py  index.html
transforms/code/code_quality/python/: index.html
transforms/code/code_quality/ray/: index.html
transforms/code/header_cleanser/: index.html
transforms/code/header_cleanser/kfp_ray/: header_cleanser_wf.py  index.html
transforms/code/header_cleanser/python/: index.html
transforms/code/header_cleanser/ray/: index.html
transforms/code/license_select/: index.html
transforms/code/license_select/kfp_ray/: license_select_wf.py
transforms/code/license_select/python/: index.html
transforms/code/license_select/ray/: index.html
transforms/code/malware/: index.html
transforms/code/malware/kfp_ray/: index.html  malware_wf.py
transforms/code/malware/python/: index.html
transforms/code/malware/ray/: index.html
transforms/code/proglang_select/: index.html
transforms/code/proglang_select/kfp_ray/: index.html  proglang_select_wf.py
transforms/code/proglang_select/python/: index.html
transforms/code/proglang_select/ray/: index.html
transforms/code/repo_level_ordering/: index.html
transforms/code/repo_level_ordering/kfp_ray/: repo_level_order_wf.py
transforms/code/repo_level_ordering/ray/: index.html
transforms/language/doc_chunk/: index.html
transforms/language/doc_chunk/dpk_doc_chunk/: chunkers.py  local_python.py  transform.py
transforms/language/doc_chunk/kfp_ray/: doc_chunk_multiple_wf.py  doc_chunk_wf.py  index.html
transforms/language/doc_chunk/test/: test_doc_chunk_python.py
transforms/language/doc_quality/: index.html
transforms/language/doc_quality/dpk_doc_quality/: transform.py  transform_python.py
transforms/language/doc_quality/kfp_ray/: doc_quality_multiple_wf.py  doc_quality_wf.py
transforms/language/doc_quality/test/: test_doc_quality_python.py  test_doc_quality_ray.py
transforms/language/extreme_tokenized/: index.html
transforms/language/gneissweb_classification/: index.html
transforms/language/html2parquet/: README.md  index.html
transforms/language/html2parquet/dpk_html2parquet/: local_python.py  transform.py
transforms/language/html2parquet/kfp_ray/: html2parquet_wf.py
transforms/language/lang_id/: index.html
transforms/language/lang_id/dpk_lang_id/: lang_models.py  (+1 more)
transforms/language/pdf2parquet/: index.html
transforms/language/pii_redactor/: index.html
transforms/language/readability/: index.html
transforms/language/similarity/: README.md  index.html  similarity.ipynb
transforms/language/text_encoder/: index.html
transforms/universal/doc_id/: Dockerfile.python  index.html
transforms/universal/ededup/: index.html
transforms/universal/fdedup/: index.html  requirements.txt
transforms/universal/filter/: index.html
transforms/universal/hap/: index.html
transforms/universal/noop/: index.html
transforms/universal/profiler/: index.html
transforms/universal/rep_removal/: index.html
transforms/universal/resize/: index.html
transforms/universal/tokenization/: index.html
transforms/universal/web2parquet/: index.html
(+335 files in other folders)
